[package]
name = "radiantkit"
version = "0.0.9"
edition = "2021"
description = "Framework to build graphic applications"
repository = "https://github.com/radiant-labs/radiantkit"
homepage = "https://www.radiantkit.xyz/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.10"
wgpu = { version = "0.17", features = ["webgl"]}
bytemuck = { version = "1.12", features = [ "derive" ] }
log = "0.4"
cgmath = "0.18"
serde = { version = "1.0", features = ["derive"] }
epaint = { version = "0.22.0", features = ["bytemuck", "serde"] }
pollster = "0.3"
futures-intrusive = "0.5"
radiantkit-core  = { version = "0.0.1", path = "../crates/core" }
radiantkit-macros  = { version = "0.0.1", path = "../crates/macros" }
radiantkit-image = { version = "0.0.1", path = "../crates/image" }
radiantkit-text = { version = "0.0.1", path = "../crates/text" }
radiantkit-path = { version = "0.0.1", path = "../crates/path" }
radiantkit-winit = { version = "0.0.1", path = "../crates/winit" }
macro_magic = "0.5.0"
radiantkit-collaboration = { version = "0.0.1", path = "../crates/collaboration" }
parking_lot = { version = "0.12.1", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
radiantkit-video = { version = "0.0.1", path = "../crates/video", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0"
console_error_panic_hook = "0.1.6"
serde-wasm-bindgen = "0.4"
js-sys = "0.3.64"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[features]
video = [
    "dep:radiantkit-video"
]
av = [
    "video",
    "radiantkit-video?/av"
]

[dependencies.uuid]
version = "1.6.1"
features = [
    "wasm-bindgen",
    "serde",
]
