[package]
name = "radiantkit-collaboration"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
radiantkit-core = { version = "0.0.1", path = "../core" }
serde_json = "1.0.108"
yrs = "0.17.1"
y-sync = "0.4.0"
pollster = "0.3"
futures-util = "0.3.29"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.20.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "console"
]}
