[package]
name = "radiantkit-collaboration"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
radiantkit-core = { version = "0.0.1", path = "../core" }
serde_json = "1.0.108"
yrs = "0.17.1"
pollster = "0.3"
futures-util = "0.3.29"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
y-sync = { version = "0.4.0", features = ["net"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
y-sync = "0.4.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
js-sys = "0.3.64"
web-sys = { version = "0.3", features = [
    "Window",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "console"
]}

[dependencies.uuid]
version = "1.6.1"
features = [
    "wasm-bindgen",
    "serde",
]
