[package]
name = "radiantkit-core"
version = "0.0.1"
edition = "2021"
description = "Framework to build graphic applications"
repository = "https://github.com/radiant-labs/radiantkit"
homepage = "https://www.radiantkit.xyz/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.17", features = ["webgl"]}
bytemuck = { version = "1.12", features = [ "derive" ] }
log = "0.4"
cgmath = "0.18"
serde = { version = "1.0", features = ["derive"] }
epaint = { version = "0.22.0", features = ["bytemuck", "serde"] }
pollster = "0.3"
futures-intrusive = "0.5"
macro_magic = "0.5.0"
radiantkit-macros = { version = "0.0.1", path = "../macros" }
once_cell = "1.19.0"
parking_lot = { version = "0.12.1", features = ["serde"] }
serde_json = "1.0.108"

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"
uuid = { version = "1.6.1", features = [
    "wasm-bindgen",
    "serde",
    "v4",
    "js",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.6.1", features = [
    "serde",
    "v4",
] }
