[package]
name = "radiantkit-macros"
version = "0.0.1"
edition = "2021"
description = "Framework to build graphic applications"
repository = "https://github.com/radiant-labs/radiantkit"
homepage = "https://www.radiantkit.xyz/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = "2.0.38"
macro_magic = { version = "0.5.0", features = ["proc_support"] }
proc-utils = "0"
