[package]
name = "radiant-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_log = "1.0"
console_error_panic_hook = "0.1.6"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
radiant-main = { path = "../main" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3.64"
