[package]
name = "radiant-winit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
pollster = "0.3"
image = "0.23"
futures-intrusive = "0.5"
serde = { version = "1.0", features = ["derive"] }
epaint = { version = "0.22.0", features = ["bytemuck", "serde"] }
radiant-core  = { path = "../core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.17", features = ["webgl"]}
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.4"
js-sys = "0.3.64"
