[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
radiantkit = { path = "../../runtime" }
pollster = "0.3"
env_logger = "0.10"
log = "0.4"
uuid = { version = "1.6.1", features = [
    "serde",
    "v4",
] }