[package]
name = "radiant-egui-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
radiant-runtime = { path = "../../runtime" }
pollster = "0.3"
winit = "0.28"
env_logger = "0.10"
egui = "0.22.0"
egui_winit_platform = "0.19.0"
egui_wgpu_backend = "0.25.0"
egui_demo_lib = "0.22.0"
wgpu = "0.17.0"
eframe = "0.22.0"
log = "0.4"
